day 11, part 2 wip

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyObM8gqxYrW5MKdZrsdh3Dv",
+      "authorship_tag": "ABX9TyOWnkazgArpPlPuum3vLANq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1194,7 +1194,7 @@
       "metadata": {
         "id": "ulrsBZq2DX2-"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1224,7 +1224,7 @@
       "metadata": {
         "id": "JilzmHArDj79"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1248,7 +1248,7 @@
         "id": "lBaCaS6DZdpi",
         "outputId": "ea9aa935-3c0c-456d-b42f-3f882a684b09"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1283,7 +1283,7 @@
         "id": "aVweMTquZsTf",
         "outputId": "f4a07257-9311-4b49-8337-1f1e477410b0"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1315,7 +1315,7 @@
       "metadata": {
         "id": "QJQB5jz7bASf"
       },
-      "execution_count": 66,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -1330,11 +1330,9 @@
     {
       "cell_type": "code",
       "source": [
-        "cache = {}\n",
-        "\n",
         "def blink_single(s):\n",
-        "  if s in cache:\n",
-        "    return cache[s]\n",
+        "  # if s in cache:\n",
+        "    # return cache[s]\n",
         "  if s == '0':\n",
         "    res = ['1']\n",
         "  elif len(s) % 2 == 0:\n",
@@ -1342,13 +1340,28 @@
         "    res = [s[:h], f'{int(s[h:])}']\n",
         "  else:\n",
         "    res = [f'{int(s) * 2024}']\n",
-        "  cache[s] = res\n",
+        "  #cache[s] = res\n",
+        "  return res\n",
+        "\n",
+        "cache = {}\n",
+        "\n",
+        "def blink(line, iterations):\n",
+        "  if iterations == 0:\n",
+        "    return line\n",
+        "  res = []\n",
+        "  for i in range(len(line)):\n",
+        "    if (line[i], iterations) in cache:\n",
+        "      b = cache[(line[i], iterations)]\n",
+        "    else:\n",
+        "      b = blink(blink_single(line[i]), iterations - 1)\n",
+        "      cache[(line[i], iterations)] = b\n",
+        "    res += b\n",
         "  return res"
       ],
       "metadata": {
         "id": "DTlDxndlciR7"
       },
-      "execution_count": 101,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1363,26 +1376,28 @@
     {
       "cell_type": "code",
       "source": [
-        "len(blink(input11, 25))"
+        "cache = {}\n",
+        "r = blink(input11, 25)\n",
+        "print(len(r))\n",
+        "print(len(cache))\n",
+        "# print(cache)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fPMRBRvfds8G",
-        "outputId": "5a65f4fd-369c-4557-b5d4-6b1d18a5cfb7"
+        "outputId": "273bb666-dccc-48e3-96b7-26193a170721"
       },
-      "execution_count": 100,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "182081"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 100
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "182081\n",
+            "3644\n"
+          ]
         }
       ]
     },
@@ -1397,12 +1412,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "[1,2] + [3,4]"
+      ],
       "metadata": {
-        "id": "XlJTxTNhfBZF"
+        "id": "XlJTxTNhfBZF",
+        "outputId": "47fad7c7-8fbc-4c5e-adbd-6eabfffe248b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     }
   ]
 }
