day 11, part 2 wip

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyOWnkazgArpPlPuum3vLANq",
+      "authorship_tag": "ABX9TyNnBx6G0yFa2hCs3tWsa2YC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1387,16 +1387,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fPMRBRvfds8G",
-        "outputId": "273bb666-dccc-48e3-96b7-26193a170721"
+        "outputId": "a311503b-0467-4e78-94a2-25dab13fed77"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "182081\n",
-            "3644\n"
+            "95665503\n",
+            "19208\n"
           ]
         }
       ]
@@ -1413,14 +1413,18 @@
     {
       "cell_type": "code",
       "source": [
-        "[1,2] + [3,4]"
+        "cache = {}\n",
+        "r = blink(input11, 75)\n",
+        "print(len(r))\n",
+        "print(len(cache))\n",
+        "# print(cache)"
       ],
       "metadata": {
         "id": "XlJTxTNhfBZF",
-        "outputId": "47fad7c7-8fbc-4c5e-adbd-6eabfffe248b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "47fad7c7-8fbc-4c5e-adbd-6eabfffe248b"
       },
       "execution_count": 9,
       "outputs": [
