day 11, part 2 wip

--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyNnBx6G0yFa2hCs3tWsa2YC",
+      "authorship_tag": "ABX9TyMSEJq8Cj7qPyMwCao0z6Tm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1194,7 +1194,7 @@
       "metadata": {
         "id": "ulrsBZq2DX2-"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1224,7 +1224,7 @@
       "metadata": {
         "id": "JilzmHArDj79"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1239,16 +1239,16 @@
     {
       "cell_type": "code",
       "source": [
-        "sum(len({peak for peak in find_peaks(p, [], [])}) for p in trailheads)"
+        "sum(len(set(find_peaks(p, [], []))) for p in trailheads)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lBaCaS6DZdpi",
-        "outputId": "ea9aa935-3c0c-456d-b42f-3f882a684b09"
+        "outputId": "61bb8bd7-d46f-4aa6-f3d4-861b89ba8c8c"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1258,7 +1258,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 32
         }
       ]
     },
@@ -1281,9 +1281,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aVweMTquZsTf",
-        "outputId": "f4a07257-9311-4b49-8337-1f1e477410b0"
+        "outputId": "96956a65-3c11-4be6-a68f-5ae23d8385bf"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1315,7 +1315,7 @@
       "metadata": {
         "id": "QJQB5jz7bASf"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1344,30 +1344,36 @@
         "  return res\n",
         "\n",
         "cache = {}\n",
-        "\n",
+        "cache_hits = []\n",
+        "iter = {}\n",
         "def blink(line, iterations):\n",
+        "  iter[iterations] = iter[iterations] + 1 if iterations in iter else 1\n",
         "  if iterations == 0:\n",
         "    return line\n",
         "  res = []\n",
         "  for i in range(len(line)):\n",
-        "    if (line[i], iterations) in cache:\n",
-        "      b = cache[(line[i], iterations)]\n",
+        "    key = (line[i], iterations)\n",
+        "    if key in cache:\n",
+        "      # print(f'cache hit in with {iterations} iterations to go')\n",
+        "      cache_hits.append(key)\n",
+        "      b = cache[key]\n",
         "    else:\n",
         "      b = blink(blink_single(line[i]), iterations - 1)\n",
-        "      cache[(line[i], iterations)] = b\n",
+        "      #if len(b) > 2:\n",
+        "      cache[key] = b\n",
         "    res += b\n",
         "  return res"
       ],
       "metadata": {
         "id": "DTlDxndlciR7"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Day 11, part 1, 25 itertions"
+        "Day 11, part 1, 25 itertions / part 2, 75 iterations"
       ],
       "metadata": {
         "id": "i0f5MqgtioxE"
@@ -1376,69 +1382,45 @@
     {
       "cell_type": "code",
       "source": [
+        "iter = {}\n",
         "cache = {}\n",
-        "r = blink(input11, 25)\n",
-        "print(len(r))\n",
-        "print(len(cache))\n",
-        "# print(cache)"
+        "cache_hits = []\n",
+        "r = blink(input11, 40)\n",
+        "# print(r)\n",
+        "print(f'stones: {len(r)}')\n",
+        "print(f'blink() calls: {sum(i for i in iter.values())}, by iterations to go: {iter}')\n",
+        "print(f'cache entries: {len(cache)}, cache size (number of strings, regardless of length): {sum(len(v) for v in cache.values())}')\n",
+        "print(f'cache hits: {len(cache_hits)}, distinct: {len(set(cache_hits))}')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fPMRBRvfds8G",
-        "outputId": "a311503b-0467-4e78-94a2-25dab13fed77"
+        "outputId": "5489b28f-2e5b-4300-d9ff-e38fbdbeb71f"
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "95665503\n",
-            "19208\n"
+            "stones: 95665503\n",
+            "blink() calls: 19209, by iterations to go: {40: 1, 39: 8, 38: 10, 37: 13, 36: 19, 35: 27, 34: 32, 33: 43, 32: 55, 31: 68, 30: 85, 29: 92, 28: 111, 27: 114, 26: 123, 25: 151, 24: 156, 23: 183, 22: 200, 21: 213, 20: 238, 19: 268, 18: 319, 17: 326, 16: 389, 15: 401, 14: 488, 13: 515, 12: 561, 11: 675, 10: 700, 9: 841, 8: 849, 7: 999, 6: 1015, 5: 1223, 4: 1297, 3: 1419, 2: 1564, 1: 1595, 0: 1823}\n",
+            "cache entries: 19208, cache size (number of strings, regardless of length): 787775151\n",
+            "cache hits: 8159, distinct: 2130\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Day 11, part 2, 75 iterations"
-      ],
-      "metadata": {
-        "id": "p-mTmP2MmChS"
-      }
-    },
-    {
       "cell_type": "code",
-      "source": [
-        "cache = {}\n",
-        "r = blink(input11, 75)\n",
-        "print(len(r))\n",
-        "print(len(cache))\n",
-        "# print(cache)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "XlJTxTNhfBZF",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "47fad7c7-8fbc-4c5e-adbd-6eabfffe248b"
+        "id": "aalsa-dy5ZvV"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[1, 2, 3, 4]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
