--- a/2024/aoc2024.ipynb
+++ b/2024/aoc2024.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/mgerlach/advent_of_code/blob/main/2024/aoc2024.ipynb",
-      "authorship_tag": "ABX9TyMSEJq8Cj7qPyMwCao0z6Tm",
+      "authorship_tag": "ABX9TyMLk0q6TEOSvCK7kxekfmtz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,10 @@
     {
       "cell_type": "code",
       "source": [
+        "from collections import Counter\n",
+        "from functools import reduce\n",
+        "from itertools import groupby, islice, takewhile\n",
+        "\n",
         "def vec_add(v1, v2):\n",
         "  return tuple(sum(i) for i in zip(v1, v2))\n",
         "\n",
@@ -70,12 +74,18 @@
         "  current = start\n",
         "  while True:\n",
         "    yield current\n",
-        "    current = func(current)"
+        "    current = func(current)\n",
+        "\n",
+        "def read_grid(filename):\n",
+        "  input = [line.strip() for line in open(f'drive/MyDrive/AoC/2024/{filename}.txt')]\n",
+        "  height = len(input)\n",
+        "  width = len(input[0])\n",
+        "  return input, height, width"
       ],
       "metadata": {
         "id": "6gZpKr0ZzFrO"
       },
-      "execution_count": 1,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -441,15 +451,12 @@
     {
       "cell_type": "code",
       "source": [
-        "input04 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input04.txt')]\n",
-        "rows = len(input04)\n",
-        "cols = len(input04[0])\n",
-        "dimensions = (rows, cols)"
+        "input04, rows, cols = read_grid(\"input04\")"
       ],
       "metadata": {
         "id": "27Y3thHmvm7E"
       },
-      "execution_count": null,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -465,8 +472,7 @@
       "cell_type": "code",
       "source": [
         "def check_char(p, char):\n",
-        "  y, x = p\n",
-        "  return in_range(p, dimensions) and input04[y][x] == char\n",
+        "  return in_range(p, (rows, cols)) and get_cell(p, input04) == char\n",
         "\n",
         "def check(s, p, d):\n",
         "  return s == \"\" or check_char(p, s[0]) and check(s[1:], vec_add(p, d), d)\n",
@@ -481,9 +487,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w2qf355Rw6lx",
-        "outputId": "3e9a7d7c-8c2e-4e4f-cdcb-702d22fe6a4c"
+        "outputId": "c3329622-fe74-408c-98a9-1c2b38f3a69a"
       },
-      "execution_count": null,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,7 +499,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 114
         }
       ]
     },
@@ -532,7 +538,7 @@
         "\n",
         "# Search for A within (1, 1)...(rows-1, cols-1) and check match for all patterns\n",
         "sum(1\n",
-        "    for p in [(y, x) for y in range(1, rows-1) for x in range(1, cols-1) if input04[y][x] == 'A']\n",
+        "    for p in [(y, x) for y in range(1, rows-1) for x in range(1, cols-1) if get_cell((y, x), input04) == 'A']\n",
         "    for pattern in patterns if check_pattern(p, pattern))"
       ],
       "metadata": {
@@ -540,9 +546,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vAxUvNhOjoOZ",
-        "outputId": "8c4d5f9b-ea3a-4038-d482-194b95d32c3a"
+        "outputId": "69b78d67-4197-481c-c053-b711b11ef013"
       },
-      "execution_count": null,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +558,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 116
         }
       ]
     },
@@ -568,7 +574,7 @@
     {
       "cell_type": "code",
       "source": [
-        "input05 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input05.txt')]\n",
+        "input05, _, _ = read_grid(\"input05\")\n",
         "split_index = input05.index('')\n",
         "rules = [tuple(int(n) for n in rule.split('|')) for rule in input05[:split_index]]\n",
         "updates = [[int(n) for n in update.split(',')] for update in input05[split_index+1:]]"
@@ -576,7 +582,7 @@
       "metadata": {
         "id": "G_ynPO_i05nv"
       },
-      "execution_count": null,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -602,7 +608,7 @@
       "metadata": {
         "id": "3Ze94NW_zPJo"
       },
-      "execution_count": null,
+      "execution_count": 119,
       "outputs": []
     },
     {
@@ -624,9 +630,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qWoawq4o4l6v",
-        "outputId": "a1e09cca-fbe2-435b-f429-50a96ac19f87"
+        "outputId": "a74e3d6d-c03f-4351-9693-8eea17b5fc7a"
       },
-      "execution_count": null,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +642,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 120
         }
       ]
     },
@@ -670,9 +676,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e3hdrfwD-5uA",
-        "outputId": "05f592f2-d985-4880-8f36-0575e3e08312"
+        "outputId": "d940802a-8e61-49e8-d57e-6786c3d9192f"
       },
-      "execution_count": null,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -682,7 +688,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 63
+          "execution_count": 121
         }
       ]
     },
@@ -698,16 +704,14 @@
     {
       "cell_type": "code",
       "source": [
-        "input06 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input06.txt')]\n",
-        "height = len(input06)\n",
-        "width = len(input06[0])\n",
+        "input06, height, width = read_grid(\"input06\")\n",
         "dimensions = (height, width)\n",
         "start = [(y, x) for y in range(height) for x in range(width) if get_cell((y, x), input06) == '^'][0]"
       ],
       "metadata": {
         "id": "14BPsXpkMxlv"
       },
-      "execution_count": null,
+      "execution_count": 123,
       "outputs": []
     },
     {
@@ -729,7 +733,7 @@
         "  while in_range(p, dimensions):\n",
         "    next = vec_add(p, dir)\n",
         "    if in_range(next, dimensions):\n",
-        "      if get_cell(next, grid) == '#':\n",
+        "      if get_cell(next, input06) == '#':\n",
         "        dir = turn_right[dir]\n",
         "      elif (next, dir) in visited:\n",
         "        return (visited, True)\n",
@@ -744,12 +748,12 @@
       ],
       "metadata": {
         "id": "QdJqwU6xNns3",
-        "outputId": "2dbe8776-a241-4900-e7bf-9d1570d954ef",
+        "outputId": "976d8035-2d5f-4732-bd12-561b0565cc10",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -759,7 +763,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 124
         }
       ]
     },
@@ -788,25 +792,10 @@
         "loops"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vilThMk8kFpb",
-        "outputId": "aaeddf86-b39b-418d-fd1e-352a2b22eec5"
+        "id": "vilThMk8kFpb"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1562"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 59
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -932,10 +921,7 @@
     {
       "cell_type": "code",
       "source": [
-        "input08 = [line.strip() for line in open('drive/MyDrive/AoC/2024/input08.txt')]\n",
-        "height = len(input08)\n",
-        "width = len(input08[0])\n",
-        "dimensions = (height, width)\n",
+        "input08, height, width = read_grid(\"input08\")\n",
         "antennas = {}\n",
         "for (name, pos) in [(input08[y][x], (y, x)) for y in range(height) for x in range(width) if input08[y][x] != '.']:\n",
         "  if name in antennas:\n",
@@ -946,7 +932,7 @@
       "metadata": {
         "id": "u4F3xlexzshP"
       },
-      "execution_count": null,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -971,9 +957,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zbQL-Qxz31kl",
-        "outputId": "cb7a5683-c774-40ca-9015-25131b37158d"
+        "outputId": "8133e30d-c497-435f-8fd1-43cda0a3401d"
       },
-      "execution_count": null,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -983,7 +969,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 140
+          "execution_count": 97
         }
       ]
     },
@@ -1017,9 +1003,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z24X9r_K8ZNk",
-        "outputId": "11bf27bf-6a0f-4293-8b2d-eae539265c11"
+        "outputId": "4b975a7d-3cf4-457c-db15-4fe2f20f9e0e"
       },
-      "execution_count": null,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1029,7 +1015,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 141
+          "execution_count": 98
         }
       ]
     },
@@ -1194,7 +1180,7 @@
       "metadata": {
         "id": "ulrsBZq2DX2-"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1224,7 +1210,7 @@
       "metadata": {
         "id": "JilzmHArDj79"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1248,7 +1234,7 @@
         "id": "lBaCaS6DZdpi",
         "outputId": "61bb8bd7-d46f-4aa6-f3d4-861b89ba8c8c"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1283,7 +1269,7 @@
         "id": "aVweMTquZsTf",
         "outputId": "96956a65-3c11-4be6-a68f-5ae23d8385bf"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1315,7 +1301,7 @@
       "metadata": {
         "id": "QJQB5jz7bASf"
       },
-      "execution_count": 4,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -1354,12 +1340,10 @@
         "  for i in range(len(line)):\n",
         "    key = (line[i], iterations)\n",
         "    if key in cache:\n",
-        "      # print(f'cache hit in with {iterations} iterations to go')\n",
         "      cache_hits.append(key)\n",
         "      b = cache[key]\n",
         "    else:\n",
         "      b = blink(blink_single(line[i]), iterations - 1)\n",
-        "      #if len(b) > 2:\n",
         "      cache[key] = b\n",
         "    res += b\n",
         "  return res"
@@ -1367,7 +1351,7 @@
       "metadata": {
         "id": "DTlDxndlciR7"
       },
-      "execution_count": 11,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -1385,7 +1369,7 @@
         "iter = {}\n",
         "cache = {}\n",
         "cache_hits = []\n",
-        "r = blink(input11, 40)\n",
+        "r = blink(input11, 25)\n",
         "# print(r)\n",
         "print(f'stones: {len(r)}')\n",
         "print(f'blink() calls: {sum(i for i in iter.values())}, by iterations to go: {iter}')\n",
@@ -1397,27 +1381,120 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fPMRBRvfds8G",
-        "outputId": "5489b28f-2e5b-4300-d9ff-e38fbdbeb71f"
+        "outputId": "cdec1648-290b-44b7-90eb-eb8e1d45adcc"
       },
-      "execution_count": 12,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "stones: 95665503\n",
-            "blink() calls: 19209, by iterations to go: {40: 1, 39: 8, 38: 10, 37: 13, 36: 19, 35: 27, 34: 32, 33: 43, 32: 55, 31: 68, 30: 85, 29: 92, 28: 111, 27: 114, 26: 123, 25: 151, 24: 156, 23: 183, 22: 200, 21: 213, 20: 238, 19: 268, 18: 319, 17: 326, 16: 389, 15: 401, 14: 488, 13: 515, 12: 561, 11: 675, 10: 700, 9: 841, 8: 849, 7: 999, 6: 1015, 5: 1223, 4: 1297, 3: 1419, 2: 1564, 1: 1595, 0: 1823}\n",
-            "cache entries: 19208, cache size (number of strings, regardless of length): 787775151\n",
-            "cache hits: 8159, distinct: 2130\n"
+            "stones: 182081\n",
+            "blink() calls: 3645, by iterations to go: {25: 1, 24: 8, 23: 10, 22: 13, 21: 19, 20: 27, 19: 32, 18: 43, 17: 55, 16: 68, 15: 85, 14: 92, 13: 111, 12: 114, 11: 123, 10: 151, 9: 156, 8: 183, 7: 200, 6: 213, 5: 238, 4: 268, 3: 319, 2: 326, 1: 389, 0: 401}\n",
+            "cache entries: 3644, cache size (number of strings, regardless of length): 1493775\n",
+            "cache hits: 1533, distinct: 476\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Day 12, input"
+      ],
+      "metadata": {
+        "id": "L9907uoPDcsm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grid, dimensions = read_lines(\"input12\")\n",
+        "# grid=['AAAA','BBCD','BBCC','EEEC']\n",
+        "# grid=['OOOOO','OXOXO','OOOOO','OXOXO','OOOOO']\n",
+        "# dimensions=(len(grid), len(grid[0]))\n",
+        "width, height = dimensions"
+      ],
+      "metadata": {
+        "id": "aalsa-dy5ZvV"
+      },
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 12, part 1, areas * perimeters"
+      ],
+      "metadata": {
+        "id": "3kANSv14R0IL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def perimeter(p, grid):\n",
+        "  c = get_cell(p, grid)\n",
+        "  return sum(0 if in_range(vec_add(p, d), dimensions) and get_cell(vec_add(p, d), grid) == c else 1 for d in dirs90)\n",
+        "\n",
+        "global_visited = set()\n",
+        "\n",
+        "def region(p, grid):\n",
+        "  c = get_cell(p, grid)\n",
+        "  visited = set()\n",
+        "\n",
+        "  def collect(p):\n",
+        "    if p in global_visited or p in visited or not in_range(p, dimensions) or get_cell(p, grid) != c:\n",
+        "      return\n",
+        "    visited.add(p)\n",
+        "    global_visited.add(p)\n",
+        "    for d in dirs90:\n",
+        "       collect(vec_add(p, d))\n",
+        "\n",
+        "  collect(p)\n",
+        "  return c, visited\n",
+        "\n",
+        "regions = [region(p, grid) for p in [(y, x) for y in range(height) for x in range(width)] if not p in global_visited]\n",
+        "# print(regions)\n",
+        "\n",
+        "# len(r) = area of region r (consisting of all points for the region) with char c\n",
+        "sum(sum(perimeter(p, grid) for p in r) * len(r) for (c, r) in regions)\n"
+      ],
+      "metadata": {
+        "id": "bawcOtASR26A",
+        "outputId": "0b866107-cfba-4bb3-e7aa-a5e8aed2ba29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1494342"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Day 12, part 2, areas * side count"
+      ],
+      "metadata": {
+        "id": "6st_ex4XjnTo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "aalsa-dy5ZvV"
+        "id": "SWYo8L6xbrHt"
       },
       "execution_count": null,
       "outputs": []
